--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="div-po-right">
                     <div class="div-po-icon">
-                        <img src="/images/mail1.svg" alt="SVG Icon" width="50" height="50">
+                        <img src="/khuntran/images/mail1.svg" alt="SVG Icon" width="50" height="50">
                     </div>
                     <div class="div-po-icon">
                         <img src="/images/phone1.svg" alt="SVG Icon" width="50" height="50">
