--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
                 </div>
                 <div class="div-po-right">
                     <div class="div-po-icon">
-                        <img src="../images/mail1.svg" alt="SVG Icon" width="50" height="50">
+                        <img src="./images/mail1.svg" alt="SVG Icon" width="50" height="50">
                     </div>
                     <div class="div-po-icon">
-                        <img src="../images/phone1.svg" alt="SVG Icon" width="50" height="50">
+                        <img src="./images/phone1.svg" alt="SVG Icon" width="50" height="50">
                     </div>
                     <div class="div-po-icon">
-                        <img src="../images/behance-fill1.svg" alt="SVG Icon" width="50" height="50">
+                        <img src="./images/behance-fill1.svg" alt="SVG Icon" width="50" height="50">
                     </div>
                 </div>
             </div>
@@ -41,7 +41,7 @@
                         </label>   
                     </div>  
                     <div class="div-po-p-b3">
-                        <img src="../images/mouse-alt-31.svg" alt="SVG Icon" width="24" height="24">
+                        <img src="./images/mouse-alt-31.svg" alt="SVG Icon" width="24" height="24">
                         <label class="label-b3"> Scroll to view more </label>
                     </div>
                 </div>
@@ -328,19 +328,19 @@
                     <div class="div-po-p-b2">
                         <div class="div-po-right">
                             <div class="div-po-icon">
-                                <img src="../images/mail1.svg" alt="SVG Icon" width="50" height="50">
+                                <img src="./images/mail1.svg" alt="SVG Icon" width="50" height="50">
                             </div>
                             <div class="div-po-icon">
-                                <img src="../images/phone1.svg" alt="SVG Icon" width="50" height="50">
+                                <img src="./images/phone1.svg" alt="SVG Icon" width="50" height="50">
                             </div>
                             <div class="div-po-icon">
-                                <img src="../images/behance-fill1.svg" alt="SVG Icon" width="50" height="50">
+                                <img src="./images/behance-fill1.svg" alt="SVG Icon" width="50" height="50">
                             </div>
                         </div>  
                     </div>  
                 </div>
                 <div class="div-po-p-right">
-                    <img src="../images/file.svg" alt="proflie" width="512" height="510">
+                    <img src="./images/file.svg" alt="proflie" width="512" height="510">
                 </div>
             </div>
 
