--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
                 </div>
             </div>
             <div class="div-1-2"></div>
-            <div>
+            <div class="div-1">
+                <img src="./images/star-alt-31.svg" alt="SVG Icon" width="24" height="24">
+                <div style="width: 10px"></div>
                 <label class="l6">CERTIFICATE</label>
             </div>
             <div>
