--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
                           </div>
                         <label class="label-b3"> Scroll to view more </label>
                     </div>
+                    <div class="div-po-p-b3-n"></div>
                 </div>
                 <div class="div-po-p-right">
                     <img class="class-img" src="./images/imagepo.jpeg" alt="proflie" width="647.83" height="680">
