--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <li><a class="dropdown-item" href="#" data-scroll=".section4">
                                 <label class="menu-po-check">SHOWCASE</label> </a></li>
                             <li><a class="dropdown-item" href="#" data-scroll=".section6">
-                                <label class="menu-po-check">CONTRACT</label></a></li>
+                                <label class="menu-po-check">CONTACT</label></a></li>
                         </ul>
                     </div>
                     <script>
@@ -176,7 +176,7 @@
                 </div>
             </div>
             <div class="div-1-2"></div>
-            <div class="div-1">
+            <div class="div-1-m">
                 <img src="./images/star-alt-31.svg" alt="SVG Icon" width="24" height="24">
                 <div style="width: 10px"></div>
                 <label class="l6">CERTIFICATE</label>
@@ -203,12 +203,12 @@
                     <label class="l7">UI Designer&nbsp;&nbsp;&nbsp;</label>
                     <label class="l8">Kaiyun group</label>
                     <div class="div-2-3">
-                        <li><label class="l4">Responsible for the company's existing product iterations and visual design work </label></li>
-                        <li><label class="l4">Provide creative, high-quality design solutions for interfaces, icons, animations, etc.</label></li>
-                        <li><label class="l4">Optimize the product's visual interaction process and enhance user experience</label></li>
-                        <li><label class="l4">Participate and control the product's visual design style, while maintaining optimization and upgrading of existing products</label></li>
-                        <li><label class="l4">Participate in early product communications, collaborate with the development team to achieve user interface design and interaction effects, and conduct testing and acceptance</label></li>
-                        <li><label class="l4">Complete product user interface adjustments, optimizations, and upgrades based on user feedback and product concept adjustments. </label></li>
+                        <li class="l4">Responsible for the company's existing product iterations and visual design work </li>
+                        <li class="l4">Provide creative, high-quality design solutions for interfaces, icons, animations, etc.</li>
+                        <li class="l4">Optimize the product's visual interaction process and enhance user experience</li>
+                        <li class="l4">Participate and control the product's visual design style, while maintaining optimization and upgrading of existing products</li>
+                        <li class="l4">Participate in early product communications, collaborate with the development team to achieve user interface design and interaction effects, and conduct testing and acceptance</li>
+                        <li class="l4">Complete product user interface adjustments, optimizations, and upgrades based on user feedback and product concept adjustments. </li>
                     </div>
                 </div>
             </div>
@@ -221,10 +221,10 @@
                     <label class="l7">UI Designer&nbsp;&nbsp;&nbsp;</label>
                     <label class="l8">Wonfa group</label>
                     <div class="div-2-3">
-                        <li><label class="l4">Directly participate in the product development process, design UI/UX for Website/App/CMS/Themes and other products according to user-friendly criteria. </label></li>
-                        <li><label class="l4">Coordinate closely with relevant departments (Technology, Marketing, Development, Design...) to choose UI/UX design options throughout the product/service project.</label></li>
-                        <li><label class="l4">Exchange ideas, develop a design process to ensure aesthetics and logic. Present ideas and products visually through support tools.</label></li>
-                        <li><label class="l4">Build UI/UX Design Guidelines to help the development team meet design requirements.</label></li>
+                        <li class="l4">Directly participate in the product development process, design UI/UX for Website/App/CMS/Themes and other products according to user-friendly criteria. </li>
+                        <li class="l4">Coordinate closely with relevant departments (Technology, Marketing, Development, Design...) to choose UI/UX design options throughout the product/service project.</li>
+                        <li class="l4">Exchange ideas, develop a design process to ensure aesthetics and logic. Present ideas and products visually through support tools.</li>
+                        <li class="l4">Build UI/UX Design Guidelines to help the development team meet design requirements.</li>
                     </div>
                 </div>
             </div>
@@ -237,12 +237,12 @@
                     <label class="l7">Senior Graphic Designer&nbsp;&nbsp;&nbsp;</label>
                     <label class="l8">Gamma Interactive Inc</label>
                     <div class="div-2-3">
-                        <li><label class="l4">Staying up to date with industry trends to keep ahead of competitors </label></li>
-                        <li><label class="l4">Producing consistently excellent visual work</label></li>
-                        <li><label class="l4">Producing a host of ideas, selecting the best ones and selling them to the other members of the team and to clients</label></li>
-                        <li><label class="l4">Encouraging others to share their ideas and nurturing creativity</label></li>
-                        <li><label class="l4">Communicating productively with management and clients to keep them up-to-date with project milestones</label></li>
-                        <li><label class="l4">Creating direction for projects and guiding team members.</label></li>
+                        <li class="l4">Staying up to date with industry trends to keep ahead of competitors </li>
+                        <li class="l4">Producing consistently excellent visual work</li>
+                        <li class="l4">Producing a host of ideas, selecting the best ones and selling them to the other members of the team and to clients</li>
+                        <li class="l4">Encouraging others to share their ideas and nurturing creativity</li>
+                        <li class="l4">Communicating productively with management and clients to keep them up-to-date with project milestones</li>
+                        <li class="l4">Creating direction for projects and guiding team members.</li>
                     </div>
                 </div>
             </div>
@@ -255,10 +255,10 @@
                     <label class="l7">Graphic Designer&nbsp;&nbsp;&nbsp;</label> 
                     <label class="l8">Quang phong Trading and Services JSC</label>
                     <div class="div-2-3">
-                        <li><label class="l4">Produced both eCommerce and non-eCommerce creative website layouts and content for the use of clients.</label></li>
-                        <li><label class="l4">Created designs, concepts, and sample layouts, based on knowledge of layout and esthetic design concepts.</label></li>
-                        <li><label class="l4">Prepared illustrations and rough sketches of material, discussing them with clients, and making necessary changes.s</label></li>
-                        <li><label class="l4">Developed graphics and layouts for product illustrations, logos, and websites mirroring company brand style.</label></li>
+                        <li class="l4">Produced both eCommerce and non-eCommerce creative website layouts and content for the use of clients.</li>
+                        <li class="l4">Created designs, concepts, and sample layouts, based on knowledge of layout and esthetic design concepts.</li>
+                        <li class="l4">Prepared illustrations and rough sketches of material, discussing them with clients, and making necessary changes.s</li>
+                        <li class="l4">Developed graphics and layouts for product illustrations, logos, and websites mirroring company brand style.</li>
                     </div>
                 </div>
             </div>
@@ -359,8 +359,8 @@
                 <div class="div-2-5">
                     <label class="l7">Graphic Designer </label>
                     <div class="div-2-3">
-                        <li><label class="l4">Work closely with our senior designer across multiple projects within the marketing team and wider company, including our monthly print magazine, flyers, product packaging, social posts, digital ad assets</label></li>
-                        <li><label class="l4">Working as part of a wider creative team alongside our in-house web designer, videographer and copywriter and be a part of our weekly creative meetings.</label></li>
+                        <li class="l4">Work closely with our senior designer across multiple projects within the marketing team and wider company, including our monthly print magazine, flyers, product packaging, social posts, digital ad assets</li>
+                        <li class="l4">Working as part of a wider creative team alongside our in-house web designer, videographer and copywriter and be a part of our weekly creative meetings.</li>
                     </div>
                 </div>
             </div>
