--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <label class="l5">02/2024 - 07/2024 </label>
                 </div>
                 <div class="div-2-5">
-                    <label class="l7">UI Designer&nbsp;&nbsp;&nbsp;</label>
+                    <label class="l7">UI.UX Designer&nbsp;&nbsp;&nbsp;</label>
                     <label class="l8">Kaiyun group</label>
                     <div class="div-2-3">
                         <li class="l4">Responsible for the company's existing product iterations and visual design work </li>
@@ -218,7 +218,7 @@
                     <label class="l5">09/2023 - 1/2024 </label>
                 </div>
                 <div class="div-2-5">
-                    <label class="l7">UI Designer&nbsp;&nbsp;&nbsp;</label>
+                    <label class="l7">UI.UX Designer&nbsp;&nbsp;&nbsp;</label>
                     <label class="l8">Wonfa group</label>
                     <div class="div-2-3">
                         <li class="l4">Directly participate in the product development process, design UI/UX for Website/App/CMS/Themes and other products according to user-friendly criteria. </li>
